# strogino

./: .gitignore  Cargo.toml  rustfmt.toml
src/: alloc.rs  lib.rs  types.rs
src/arch/: mod.rs
src/arch/arm64/: types.rs
src/arch/s390x/: types.rs
src/arch/x86_64/: types.rs
src/std/: mod.rs
src/std/errno/: mod.rs
src/std/locale/: mod.rs  posix.rs
src/std/stdlib/: constants.rs  mod.rs
src/std/string/: mod.rs
src/std/uchar/: mod.rs
src/std/wchar/: constants.rs  mbstate.rs  mod.rs
src/support/: mbstate.rs  mod.rs  string.rs
src/support/algorithm/: mod.rs  twoway.rs
src/support/locale/: mod.rs
src/support/locale/collate/: mod.rs
src/support/locale/ctype/: ascii.rs  mod.rs  utf8.rs
src/support/locale/messages/: en_us.rs  mod.rs  ru_ru.rs
src/support/locale/monetary/: en_us.rs  mod.rs  posix.rs  ru_ru.rs
src/support/locale/numeric/: en_us.rs  mod.rs  posix.rs  ru_ru.rs
src/support/locale/time/: en_us.rs  mod.rs  posix.rs  ru_ru.rs
src/support/manipulation/: bit.rs  mod.rs  shift.rs
tests/: common.h  locale.cc  string.cc  uchar.cc  wchar.cc
